--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=114,97
 Size=400,400
 Collapsed=0
 
@@ -9,7 +9,22 @@ Size=540,226
 Collapsed=0
 
 [Window][Interact]
-Pos=833,121
-Size=384,186
+Pos=1236,292
+Size=566,379
+Collapsed=0
+
+[Window][Another Window]
+Pos=253,200
+Size=198,48
+Collapsed=0
+
+[Window][Vegeta]
+Pos=13,37
+Size=345,140
+Collapsed=0
+
+[Window][Goku]
+Pos=1456,46
+Size=432,145
 Collapsed=0
 
